cka/gke-tls-lab/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-server
  labels:
    type: endpoints-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-server
    spec:
      volumes:
         - name: service-account-creds
           secret:
              secretName: service-account-creds
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=8081",
          "--backend=127.0.0.1:8080",
          "--service=$(JWT_AUDIENCE)",
          "--rollout_strategy=managed",
          "--service_account_key=/etc/nginx/creds/service-account-creds.json"
        ]
        livenessProbe:
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8081
        ports:
          - name: http
            containerPort: 8081
        volumeMounts:
          - mountPath: /etc/nginx/creds
            name: service-account-creds
            readOnly: true
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
