cka/gke-tls-lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esp-srv
  labels:
    type: esp-srv
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: http
  selector:
    app: wordpress
