cka/gke-tls-lab/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: “true”
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  labels:
    type: endpoints-app
spec:
  tls:
  - hosts:
    - api.endpoints.miaiproject2.cloud.goog
    secretName: esp-tls
  rules:
  - host: api.endpoints.miaiproject2.cloud.goog
    http:
      paths:
      - backend:
          serviceName: esp-srv
          servicePort: 80
